--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "alembic>=1.10.0",
     "psycopg2-binary>=2.9.0",
     "uvicorn[standard]>=0.21.0",
+    "python-dotenv>=1.0.1",
     "enum-tools>=0.10.0",
 ]
 
