--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-DB_USER=dbuser
-DB_PASS=1234
-DB_HOST=localhost
-DB_NAME=sharedledgerdb
+POSTGRES_DB=sharedledgerdb
+POSTGRES_USER=dbuser
+POSTGRES_PASSWORD=1234
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
