--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
+PROJECT_NAME="Shared Ledger System"
+DESCRIPTION="A shared ledger system for multiple applications in a monorepo."
+VERSION="1.0.0"
+CONTACT_NAME="Tarık Buğra Çat"
+CONTACT_MAIL="tarikbugra.cat@gmail.com"
+
+
 POSTGRES_DB=sharedledgerdb
 POSTGRES_USER=dbuser
 POSTGRES_PASSWORD=1234
