--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,24 @@
 alembic==1.14.1
 annotated-types==0.7.0
 anyio==4.8.0
+certifi==2025.1.31
 click==8.1.8
 colorama==0.4.6
 fastapi==0.115.8
 greenlet==3.1.1
 h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
 idna==3.10
+iniconfig==2.0.0
 Mako==1.3.9
 MarkupSafe==3.0.2
+packaging==24.2
+pluggy==1.5.0
 psycopg2==2.9.10
 pydantic==2.10.6
 pydantic_core==2.27.2
+pytest==8.3.4
 python-dotenv==1.0.1
 sniffio==1.3.1
 SQLAlchemy==2.0.38
