--- a/monorepo/travelai/alembic.ini
+++ b/monorepo/travelai/alembic.ini
@@ -63,7 +63,7 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://dbuser:1234@localhost:5432/sharedledgerdb
+sqlalchemy.url = driver://user:pass@localhost/dbname
 
 
 [post_write_hooks]
